# gavel

./: .claudeignore  .env.example  .gitignore  CONSTITUTION.md  LICENSE  README.md  ROADMAP.md  main.py  test_blastbox.py  test_gateway.py  test_identity.py  test_policy.py  verify_chain.py
gavel-v2/: .coverage  .env.example  DISCUSSION_POST.md  Dockerfile  HN_POST.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
gavel-v2/.devcontainer/: devcontainer.json  postCreate.sh
gavel-v2/.github/workflows/: test.yml
gavel-v2/docs/: DEPLOYMENT.md  agt-issue-draft.md  atf-checklist.md  atf-conformance-statement.md  atf-ecosystem-entry.md  blog-post.md  threat-model.md  verifiedagents-self-assessment.md
gavel-v2/examples/: artifact_demo.py  live_demo.py
gavel-v2/examples/artifacts/: c-17cc4d3d.json  c-17cc4d3d_demo_record.json  c-88bad30f.json  c-88bad30f_demo_record.json  c-be8d9393.json  c-be8d9393_demo_record.json
gavel-v2/gavel/: __init__.py  __main__.py  _agt_protocols.py  admin.py  agents.py  agt_compat.py  anomaly_monitor.py  artifact.py  audit_witness.py  baseline.py  blastbox.py  capa.py  chain.py  chain_lock.py  circuit_breaker.py  collusion.py  compliance.py  compliance_export.py  compliance_router.py  constitution.py  crypto.py  dashboard.html  data_governance.py  deception.py  demo.html  demo.py  dependencies.py  endpoint.py  enrollment.py  evasion.py  events.py  evidence.py  explainability.py  export_bundles.py  fairness.py  fleet.py  fria.py  gate.py  gateway.py  hooks.py  (+32 more)
gavel-v2/gavel/adapters/: __init__.py  claude_code.py
gavel-v2/gavel/compliance_exports/: __init__.py  bundle.py  exporter.py  types.py
gavel-v2/gavel/db/: __init__.py  base.py  engine.py  models.py  observability.py  resilience.py
gavel-v2/gavel/hub/: __init__.py  alerts.py  correlation.py  governance.py  hub.py  policy.py  registry.py
gavel-v2/gavel/models/: __init__.py  enrollment.py
gavel-v2/gavel/policies/: constitution.cedar
gavel-v2/gavel/proxy/: __init__.py  __main__.py  app.py  config.py  domain.py  enforcement.py  token_validator.py
gavel-v2/gavel/routers/: __init__.py  agent_router.py  governance_router.py  system_router.py
gavel-v2/gavel/siem/: __init__.py  anomaly.py  events.py  forwarder.py  monitor.py  scoring.py  timeline.py
gavel-v2/gavel/static/: dashboard.html
gavel-v2/scenarios/: scenario_a_standalone_microsoft.py  scenario_b_with_gavel.py
gavel-v2/scripts/: publish-pypi.sh  run-validation.sh  submit-agt-issue.sh  submit-agt-pr.sh  submit-atf-ecosystem-pr.sh
gavel-v2/tests/: conftest.py  test_admin.py  test_admin_mode_immutability.py  test_adversarial.py  test_adversarial_threat_model.py  test_agents.py  test_anomaly_monitor.py  test_artifact.py  test_audit_witness.py  test_baseline.py  test_blastbox.py  test_capa.py  test_chain.py  test_chain_lock.py  test_circuit_breaker.py  test_collusion.py  test_compliance.py  test_compliance_export.py  test_compliance_router.py  test_constitution.py  test_crypto_validation.py  test_data_governance.py  test_db_foundation.py  test_deception.py  test_dependency_injection.py  test_endpoint.py  test_enrollment.py  test_evasion.py  test_event_bus_persistent.py  test_event_bus_redis.py  test_evidence.py  test_explainability.py  test_export_bundles.py  test_fairness.py  test_fleet.py  test_fria.py  test_hooks.py  test_hub.py  test_identity.py  test_lineage.py  (+28 more)
gavel-v2/tests/adversarial/: test_constitutional_violations.py
gavel-v2/tests/db/: conftest.py  test_agent_repository.py  test_chain_repository.py  test_engine_config.py  test_enrollment_repository.py  test_evidence_repository.py  test_execution_token_repository.py  test_governance_token_repository.py  test_incident_repository.py  test_observability.py  test_resilience.py  test_review_repository.py
gavel-v2/tests/integration/: __init__.py  conftest.py  test_full_chain.py  test_full_governance_flow.py  test_gateway.py
gavel-v2/tests/unit/: test_blastbox.py  test_chain.py  test_constitution.py  test_evidence.py  test_liveness.py  test_separation.py  test_tiers.py
(+115 files in other folders)
