[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gavel-governance"
version = "0.1.0"
description = "Constitutional governance layer for autonomous AI agents, built on Microsoft's Agent Governance Toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "jlugo63" },
]
keywords = ["ai", "agents", "governance", "constitutional", "safety", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
full = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "agent-governance-toolkit[full]>=0.1.0",
]
dev = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["gavel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["gavel"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[project.urls]
Homepage = "https://github.com/jlugo63/gavel"
Repository = "https://github.com/jlugo63/gavel"
