[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gavel-governance"
version = "0.1.0"
description = "Constitutional governance layer for autonomous AI agents, built on Microsoft's Agent Governance Toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "jlugo63" },
]
keywords = ["ai", "agents", "governance", "constitutional", "safety", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
agt = [
    "agent-governance-toolkit>=3.0,<4.0",
]
db = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
]
redis = [
    "redis>=5.0",
]
full = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "agent-governance-toolkit>=3.0,<4.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0",
]
dev = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "fakeredis[lua]>=2.20",
]

[tool.hatch.build.targets.wheel]
packages = ["gavel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration and not redis_integration and not stability'"
markers = [
    "integration: marks tests requiring real Postgres (deselect with -m 'not integration')",
    "redis_integration: marks tests requiring real Redis (deselect with -m 'not redis_integration')",
    "stability: marks long-running stability tests (deselect with -m 'not stability')",
]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["gavel"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[project.urls]
Homepage = "https://github.com/jlugo63/gavel"
Repository = "https://github.com/jlugo63/gavel"
